--- a/PurchaseReq.DAL/PurchaseReq.DAL/PurchaseReq.DAL.csproj
+++ b/PurchaseReq.DAL/PurchaseReq.DAL/PurchaseReq.DAL.csproj
@@ -3,8 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <ApplicationIcon />
-    <StartupObject></StartupObject>
+    <Version>1.0.0</Version>
+    <Authors>Sean Rickard and Levi Butcher</Authors>
+    <Description>Purchase Requisition DAL</Description>
+    <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
+    <PackageTags>Purchase Req DAL</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
