--- a/PurchaseReq.DAL/PurchaseReq.Models/PurchaseReq.Models.csproj
+++ b/PurchaseReq.DAL/PurchaseReq.Models/PurchaseReq.Models.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.0</Version>
+    <Authors>Sean Rickard and Levi Butcher</Authors>
+    <Description>Models for Purchase Req DAL</Description>
+    <PackageReleaseNotes>Initial Release</PackageReleaseNotes>
+    <PackageTags>Purchase Req DAL</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
