JWT Tokens is still not working

--- a/PurchaseReq.Service/PurchaseReq.Service/appsettings.json
+++ b/PurchaseReq.Service/PurchaseReq.Service/appsettings.json
@@ -14,5 +14,10 @@
   },
   "ConnectionStrings": {
     "PurchaseReq": "Server=(localdb)\\mssqllocaldb;Database=PurchaseReq;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
+  "JWT": {
+    "JwtKey": "Smashmouth",
+    "JwtIssuer": "http://yourdomain.com",
+    "JwtExpireDays": 30
   }
 }
