--- a/PurchaseReq.Service/PurchaseReq.Service/PurchaseReq.Service.csproj
+++ b/PurchaseReq.Service/PurchaseReq.Service/PurchaseReq.Service.csproj
@@ -10,10 +10,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
-    <PackageReference Include="PurchaseReq.DAL" Version="1.0.9" />
+    <PackageReference Include="PurchaseReq.DAL" Version="1.0.12" />
     <PackageReference Include="PurchaseReq.Models" Version="1.0.4" />
   </ItemGroup>
 
