--- a/PurchaseReq.MVC/PurchaseReq.MVC/appsettings.json
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/appsettings.json
@@ -7,5 +7,8 @@
   },
   "WebServiceLocator": {
     "ServiceAddress": "http://localhost:50521/"
+  },
+  "ConnectionStrings": {
+    "PurchaseReq": "Server=(localdb)\\mssqllocaldb;Database=PurchaseReq;Trusted_Connection=True;MultipleActiveResultSets=true;"
   }
 }
